--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+Antique:wght@300&display=swap");
+
 .App {
   text-align: center;
+  font-family: "Zen Kaku Gothic Antique', sans-serif";
 }
 
 .App-logo {
